Challenge 8 push Not that hard but challenging in it's own way. Had to think the right way.